<resources>
    <string name="app_name">BEST</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Sign Up Page -->
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>